--- a/src/views/PostHeadline.pug
+++ b/src/views/PostHeadline.pug
@@ -3,8 +3,8 @@ script.
 	export label_feed = false
 	import FlairBadge from './FlairBadge'
 
-article.relative.px-16.break-words(title={post.hype})
-	div
+article.p-16.break-words(data-menu='t3_{post.id}' title={post.hype})
+	div							
 		{#if post.flair}
 			FlairBadge(flair={post.flair})
 	h3 {post.title}
@@ -14,7 +14,3 @@ style.
 		display grid
 		grid-template-rows 100%
 		grid-template-columns 120px 1fr
-		&:hover
-		&:focus
-		&:active
-			background gainsboro
