--- a/src/view/post/CommentsSection.pug
+++ b/src/view/post/CommentsSection.pug
@@ -6,4 +6,4 @@ script.
 	span [No comments.]
 {:else}
 	{#each comments as comment}
-		Comment(comment={comment} top_level={true})
+		Comment(comment={comment} depth={0})
