adjust comment & feed layouts; flatten post/comment data structs

--- a/src/global.styl
+++ b/src/global.styl
@@ -18,7 +18,10 @@ video
 	width 854px
 	height 480px
 .md
+	width 55ch
+	padding 1ch
 	white-space pre-wrap
+	background rgba(0,0,0,0.03)
 	a
 		color steelblue
 		text-decoration none
