--- a/src/view/comment/CommentTree.pug
+++ b/src/view/comment/CommentTree.pug
@@ -5,23 +5,22 @@ script.
 	import MoreCommentsReference from '/src/model/thing/MoreCommentsReference'
 
 {#if data instanceof CommentSnapshot}
-	.comment(style='margin-left: {depth * 20}px')
+	.comment(style='margin-left: {depth * 32}px')
 		.meta
 			a.avatar(href='/u/{data.author.name}') {data.author.name[0]}
 		{@html Markdown.to_HTML(data.content)}
 	{#each data.replies as reply}
 		svelte:self(data={reply} depth={depth + 1})
 {:else if data instanceof MoreCommentsReference}
-	button(style='margin-left: {depth * 20}px') {data.ids.length} more...
+	button(style='margin-left: {depth * 32}px') {data.ids.length} more...
 
 style.
 	.comment
 		display grid
 		grid-template-columns 16px 1fr
-		gap 2rem
-		width 640px
+		gap 1ch
 		overflow-wrap anywhere
-		margin-top 3rem
+		margin-top 1ch
 	.meta
 		height 100%
 		background repeating-linear-gradient(to bottom, white 4px, #888 4px, white 5px, white 8px)
