--- a/src/view/feed/Feed.pug
+++ b/src/view/feed/Feed.pug
@@ -7,10 +7,18 @@ script.
 svelte:head
 	title {feed.listing.display_name}
 main
-	.current-feed
+	nav
+	.name
 		h1 {feed.listing.display_name}
+		h1 1
 	AWAIT(let:v p={feed.PAGE})
-		FeedItemList(items={v.things} selection_id={feed.selection_id})
+		.feed-items
+			{#if feed.listing.is_pure}
+				FeedItemList(items={v.things.filter(t => t.stickied)} selection_id={feed.selection_id})
+				FeedItemList(items={v.things.filter(t => !t.stickied)} selection_id={feed.selection_id})
+			{:else}
+				FeedItemList(items={v.things.filter(t => t.pinned)} selection_id={feed.selection_id})
+				FeedItemList(items={v.things.filter(t => !t.pinned)} selection_id={feed.selection_id})
 		{#key feed.selection_id}
 			FeedItemDetail(item={v.things.find(x => x.id === feed.selection_id)})
 
@@ -19,7 +27,7 @@ style.
 		height 100%
 		width 100%
 		display grid
-		grid-template-columns 96px 1fr 1fr
+		grid-template-columns 4fr 1fr 7fr 12fr
 		grid-template-rows 100%
 		font 400 12px/16px 'Iosevka Aile'
 		-webkit-font-smoothing antialiased
@@ -32,18 +40,19 @@ style.
 			--white rgb(29 32 38)
 			--black #e3e3e3
 		color var(--black)
-		background linear-gradient(to right, var(--white) 48%, var(--lightgray) 50%, var(--white) calc(50% + 1px))
-	.current-feed
-		height 64px
+	.name
 		display flex
+		flex-flow column nowrap
 		align-items center
-		padding 0 16px
-		transform-origin top left
-		transform rotate(90deg) translate(0px, -64px)
-		& img
-			max-height 32px
+		justify-content space-between
 	h1
-		font-family monospace
+		width 1ch
 		font-size 60px
 		font-weight normal
+		line-height 1em
 		text-transform uppercase
+		word-break break-all
+	.feed-items
+		width 100%
+		height 100%
+		overflow auto
