--- a/src/view/feed/FeedItemList.pug
+++ b/src/view/feed/FeedItemList.pug
@@ -5,30 +5,18 @@ script.
 	import PostSnapshot from '/src/model/thing/PostSnapshot'
 	import CommentTree from '../comment/CommentTree'
 	import PostTitle from '../post/PostTitle'
-	$: ordinal = (item) -> items.indexOf(item) + 1
 
-table
+ol
 	{#each items as item}
-		tr(class:selected={selection_id === item.id})
-			td.arrow ►
-			td
-				{#if item instanceof PostSnapshot}
-					PostTitle(post={item})
-				{:else if item instanceof CommentSnapshot}
-					CommentTree(comment={item})
-			td.ordinal {ordinal(item)}
+		li(class:selected={selection_id === item.id})
+			{#if item instanceof PostSnapshot}
+				PostTitle(post={item})
+			{:else if item instanceof CommentSnapshot}
+				CommentTree(comment={item})
 
 style.
-	table
-		width 100%
-		height 100%
-		overflow auto
-	.ordinal
-		width 8rem
-		height 8rem
-		background var(--black)
-		color var(--white)
-		display flex
-		justify-content center
-		align-items center
-		font-size 16px
+	ol
+		padding 8ch
+	li
+		width 55ch
+		padding 1ch
