improve sr/user info parsing; iterate layout

--- a/src/App.pug
+++ b/src/App.pug
@@ -5,11 +5,15 @@ script.
 	import MouseMenu from '/src/view/menu/MouseMenu'
 	account = new AccountState()
 	feed = new FeedState()
+	###
 	document.addEventListener 'mousedown', (e) ->
+		console.log e
 		if e.buttons is 1 and e.target.href
+			console.log 'nav'
 			e.preventDefault()
 			history.pushState(null, '', e.target.href)
 			feed = new FeedState()
+	###
 	window.addEventListener 'hashchange', ->
 		feed.selection_id = location.hash[1..]
 
