--- a/src/view/comment/CommentTree.pug
+++ b/src/view/comment/CommentTree.pug
@@ -18,9 +18,9 @@ style.
 	.comment
 		display grid
 		grid-template-columns 16px 1fr
-		gap 1ch
+		gap 4px
 		overflow-wrap anywhere
-		margin-top 1ch
+		margin-top 8px
 	.meta
 		height 100%
 		background repeating-linear-gradient(to bottom, white 4px, #888 4px, white 5px, white 8px)
@@ -28,8 +28,8 @@ style.
 		background var(--white)
 		color var(--black)
 		border 1px solid
-		width 17px
-		height 17px
+		width 16px
+		height 16px
 		display flex
 		justify-content center
 		align-items center
