--- a/src/view/feed/FeedItemDetail.pug
+++ b/src/view/feed/FeedItemDetail.pug
@@ -6,7 +6,7 @@ script.
 	import PostComments from '../post/PostComments'
 	import PostContent from '../post/PostContent'
 
-.detail-pane
+.detail-pane.hide-scrollbar
 	{#if item instanceof PostSnapshot}
 		PostContent(content={item.content})
 		PostComments(COMMENTS={item.REPLIES})
@@ -18,4 +18,4 @@ style.
 		width 100%
 		height 100%
 		overflow auto
-		padding 8ch 4ch 8ch 8ch
+		padding-top 5rem
