--- a/src/view/post/PostTitle.pug
+++ b/src/view/post/PostTitle.pug
@@ -1,10 +1,10 @@
 script.
 	export post = null
 
-.title {post.content.title}
+span {post.content.title}
 
 style.
-	.title
-		font-size 16px
+	span
+		font-size 12px
 		line-height 1
 		overflow-wrap anywhere
