--- a/src/view/feed/FeedItemDetail.pug
+++ b/src/view/feed/FeedItemDetail.pug
@@ -6,7 +6,7 @@ script.
 	import PostComments from '../post/PostComments'
 	import PostContent from '../post/PostContent'
 
-.detail-pane.hide-scrollbar
+.detail-pane
 	{#if item instanceof PostSnapshot}
 		PostContent(content={item.content})
 		PostComments(COMMENTS={item.REPLIES})
@@ -15,6 +15,7 @@ script.
 
 style.
 	.detail-pane
+		grid-area body
 		width 100%
 		height 100%
 		overflow auto
